[package]
name = "fastb"
version = "0.1.0"
edition = "2024"
authors = ["Sebastian Hyland <st.hyland05@gmail.com>"]
description = "A library for converting into and out of a binary representation of biological sequence data."
readme = "README.md"


[features]
rayon = ["dep:rayon"]


[dependencies]
rayon = { version = "1.10.0", optional = true } 
